--- a/BTimeLogger.Wpf/View/MainWindow/Statistics.xaml
+++ b/BTimeLogger.Wpf/View/MainWindow/Statistics.xaml
@@ -9,7 +9,28 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:Statistics}}}"
           >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+        
+        <view:GroupFilter ViewModel="{Binding ViewModel.GroupFilterViewModel}" />
+
+        <view:TimeSpanPanel ViewModel="{Binding ViewModel.TimeSpanPanelViewModel}" Grid.Row="1" Margin="0 10 0 20"/>
+
+        <Border Margin="-10 0 0 100"
+                Grid.Row="2">
+            <view:PieChartCategories ViewModel="{Binding ViewModel.GroupStatisticsPieChartViewModel}"
+                                 />
+        </Border>
+            
         <view:PieChart ViewModel="{Binding ViewModel.GroupStatisticsPieChartViewModel}"
-                       />
+                       Grid.Column="1"
+                       Grid.RowSpan="3"/>
     </Grid>
 </UserControl>
