--- a/BTimeLogger.Wpf/Windows/CreateNewActivityWindow/CreateNewActivityWindow.xaml
+++ b/BTimeLogger.Wpf/Windows/CreateNewActivityWindow/CreateNewActivityWindow.xaml
@@ -1,31 +1,32 @@
-﻿<Window x:Class="BTimeLogger.Wpf.Windows.CreateNewIntervalWindow"
+﻿<Window x:Class="BTimeLogger.Wpf.Windows.CreateNewActivityWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:BTimeLogger.Wpf.Windows"
         xmlns:controls="clr-namespace:BTimeLogger.Wpf.Controls"
         mc:Ignorable="d"
-        Title="CreateNewIntervalWindow"
-        MinHeight="400"
+        MinHeight="250"
         MinWidth="450"
-        Height="420"
+        Height="300"
         Width="450"
         WindowStyle="None">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="32"
                       ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
     </WindowChrome.WindowChrome>
-    <Border DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:CreateNewIntervalWindow}}}"
+    <Border DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:CreateNewActivityWindow}}}"
             Background="{StaticResource skinBackgroundLightBrush}">
         <StackPanel>
             <controls:WindowButtons ViewModel="{Binding ViewModel.WindowButtonsViewModel}"
-                                 HorizontalAlignment="Right" />
-            
+                                    HorizontalAlignment="Right" />
             <!--Main content-->
-            <TextBlock Text="{StaticResource createNewInterval}"
-                       FontSize="20" HorizontalAlignment="Center"/>
-            <controls:CreateNewInterval ViewModel="{Binding ViewModel.CreateNewIntervalViewModel}" Padding="20"/>
+            <TextBlock Text="{StaticResource createNewActivity}"
+                       FontSize="20"
+                       HorizontalAlignment="Center" />
+            
+            <controls:CreateNewActivity ViewModel="{Binding ViewModel.CreateNewActivityViewModel}"
+                                        Padding="20" />
         </StackPanel>
     </Border>
 </Window>
