--- a/BTimeLogger.Wpf/Controls/CreateNewActivity/CreateNewActivity.xaml
+++ b/BTimeLogger.Wpf/Controls/CreateNewActivity/CreateNewActivity.xaml
@@ -12,7 +12,7 @@
             <Label Content="{StaticResource activityName}"
                    Target="{Binding ElementName=ActivityName}" />
             <TextBox x:Name="ActivityName"
-                     Text="{Binding ViewModel.ActivityName, Mode=TwoWay}" />
+                     Text="{Binding ViewModel.ActivityName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
             <CheckBox IsChecked="{Binding ViewModel.IsGroup}" x:Name="IsGroup" Content="{StaticResource isGroup}"
                       Margin="0 10"/>
