Added CurerntReportBanner and some bug fixes related to saving and adding report locations.

--- a/BTimeLogger.Wpf/Resources/StringResources.xaml
+++ b/BTimeLogger.Wpf/Resources/StringResources.xaml
@@ -40,4 +40,5 @@
     <system:String x:Key="createNewActivity">Create New Activity</system:String>
     <system:String x:Key="openRecent">Open Recent</system:String>
     <system:String x:Key="getStarted">Get Started</system:String>
+    <system:String x:Key="astericks">*</system:String>
 </ResourceDictionary>
