--- a/BTimeLogger.Wpf/Controls/MainLayout/MainLayout.xaml
+++ b/BTimeLogger.Wpf/Controls/MainLayout/MainLayout.xaml
@@ -48,8 +48,9 @@
         </Border>
         
         <!--Bottom banner-->
-        <Border Grid.Row="2" Padding="5">
-            <TextBlock Text="hello" />
+        <Border Grid.Row="2" Padding="5" Margin="0 10 0 0" Grid.ColumnSpan="3" 
+                Background="{StaticResource skinBackgroundDarkBrush}">
+            <local:CurrentReportBanner ViewModel="{Binding ViewModel.CurrentReportBannerViewModel}" />
         </Border>
     </Grid>
 </UserControl>
