--- a/BTimeLogger.Wpf/Resources/StringResources.xaml
+++ b/BTimeLogger.Wpf/Resources/StringResources.xaml
@@ -41,4 +41,6 @@
     <system:String x:Key="openRecent">Open Recent</system:String>
     <system:String x:Key="getStarted">Get Started</system:String>
     <system:String x:Key="astericks">*</system:String>
+    <system:String x:Key="clearAllLocations">Clear All</system:String>
+    <system:String x:Key="open">Open</system:String>
 </ResourceDictionary>
