--- a/BTimeLogger.Wpf/Controls/OpenRecentReportList/OpenRecentReportList.xaml
+++ b/BTimeLogger.Wpf/Controls/OpenRecentReportList/OpenRecentReportList.xaml
@@ -1,27 +1,56 @@
 ﻿<UserControl x:Class="BTimeLogger.Wpf.Controls.OpenRecentReportList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:BTimeLogger.Wpf.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Border DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:OpenRecentReportList}}}"
-            Style="{StaticResource ListViewBorderStyle}">
-        <ListView ItemsSource="{Binding ViewModel.ReportLocations}" SelectionMode="Single">
+             mc:Ignorable="d"
+             d:DesignHeight="450"
+             d:DesignWidth="800">
+    <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:OpenRecentReportList}}}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <Button Content="{StaticResource clearAllLocations}" Style="{StaticResource LinkButtonStyle}" HorizontalAlignment="Right"
+                Command="{Binding ViewModel.ClearReportsCommand}"/>
+        
+        <Border Style="{StaticResource ListViewBorderStyle}"
+                Grid.Row="1">
+            <ListView ItemsSource="{Binding ViewModel.ReportLocations}"
+                  SelectionMode="Single">
             <ListView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate DataType="{x:Type local:RecentReportListItemViewModel}">
                     <Border Padding="0 5">
-                        
-                    <Grid >
-                        <TextBlock Text="{Binding }" />
-                        <Button Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:OpenRecentReportList}}, Path=ViewModel.OpenReportCommand}"
-                                CommandParameter="{Binding }"
-                                Opacity="0" />
-                    </Grid>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="20*"/>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding ReportLocation }" VerticalAlignment="Center"/>
+                            
+                            <Button Command="{Binding OpenReportCommand}"
+                                    Opacity="0" 
+                                    />
+
+                            <Button Command="{Binding RemoveReportCommand}"
+                                    Grid.Column="1"
+                                    Padding="0"
+                                    Style="{StaticResource ListItemButtonStyle}">
+                                <Path Width="46"
+                                      Height="32"
+                                      Data="M 18,11 27,20 M 18,20 27,11"
+                                      Stroke="{Binding Path=Foreground,
+							             RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                                      StrokeThickness="1" />
+                            </Button>
+                        </Grid>
                     </Border>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
     </Border>
+    </Grid>
 </UserControl>
