Fixed some bugs where intervals could be added/modified with negative duration.

--- a/BTimeLogger.Wpf/Controls/CurrentReportBanner/CurrentReportBanner.xaml
+++ b/BTimeLogger.Wpf/Controls/CurrentReportBanner/CurrentReportBanner.xaml
@@ -10,9 +10,9 @@
         DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:CurrentReportBanner}}}"
         Orientation="Horizontal">
         <TextBlock Text="{Binding ViewModel.CurrentReportLocation}"
-                   Foreground="{StaticResource skinFontSecondaryBrush}" />
+                   Foreground="{DynamicResource skinFontSecondaryBrush}" />
         <TextBlock Text="{StaticResource astericks}"
-                   Foreground="{StaticResource skinFontSecondaryBrush}"
+                   Foreground="{DynamicResource skinFontSecondaryBrush}"
                    Visibility="{Binding ViewModel.HasUnsavedChanges, Converter={StaticResource boolToVis}}"/>
     </StackPanel>
 </UserControl>
