--- a/BTimeLogger.Wpf/App.xaml
+++ b/BTimeLogger.Wpf/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:BTimeLogger.Wpf"
-             xmlns:resources="clr-namespace:ATimeLogger.WPF.Resources">
+             xmlns:resources="clr-namespace:BTimeLogger.Wpf.Resources">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
