--- a/BTimeLogger.Wpf/Controls/CreateNewActivity/CreateNewActivity.xaml
+++ b/BTimeLogger.Wpf/Controls/CreateNewActivity/CreateNewActivity.xaml
@@ -1,23 +1,28 @@
 ﻿<UserControl x:Class="BTimeLogger.Wpf.Controls.CreateNewActivity"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:BTimeLogger.Wpf.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             mc:Ignorable="d"
+             d:DesignHeight="450"
+             d:DesignWidth="800">
     <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:CreateNewActivity}}}">
         <StackPanel Orientation="Vertical">
-
+            <TextBlock Text="{StaticResource invalidReport}"
+                       Foreground="{DynamicResource skinFontWarningBrush}"
+                     Visibility="{Binding ViewModel.InvalidActivityInfo, Converter={StaticResource boolToVis}}" />
             <Label Content="{StaticResource activityName}"
                    Target="{Binding ElementName=ActivityName}" />
             <TextBox x:Name="ActivityName"
                      Text="{Binding ViewModel.ActivityName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-            <CheckBox IsChecked="{Binding ViewModel.IsGroup}" x:Name="IsGroup" Content="{StaticResource isGroup}"
-                      Margin="0 10"/>
+            <CheckBox IsChecked="{Binding ViewModel.IsGroup}"
+                      x:Name="IsGroup"
+                      Content="{StaticResource isGroup}"
+                      Margin="0 10" />
 
-            
+
             <local:GroupFilter ViewModel="{Binding ViewModel.GroupFilterViewModel}"
                                x:Name="ParentGroup" />
 
@@ -31,8 +36,8 @@
                         Margin="0 0 10 0" />
                 <Button Command="{Binding ViewModel.CreateCommand}"
                         Content="{StaticResource create}"
-                        Margin="10 0 0 0" 
-                        Grid.Column="1"/>
+                        Margin="10 0 0 0"
+                        Grid.Column="1" />
             </Grid>
         </StackPanel>
     </Grid>
