--- a/BTimeLogger.Wpf/Controls/TitleBarMenu/TitleBarMenu.xaml
+++ b/BTimeLogger.Wpf/Controls/TitleBarMenu/TitleBarMenu.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:BTimeLogger.Wpf.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Menu Style="{StaticResource TitleBarMenuStyle}"
+    <Menu Style="{DynamicResource TitleBarMenuStyle}"
           DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:TitleBarMenu}}}">
         <MenuItem Header="_File">
             <MenuItem Header="_Open"
@@ -27,6 +27,12 @@
                       Command="{Binding ViewModel.CreateIntervalCommand}" />
             <MenuItem Header="Activity"
                       Command="{Binding ViewModel.CreateActivityCommand}" />
+        </MenuItem>
+        <MenuItem Header="_Settings">
+            <MenuItem Header="Dark Theme"
+                      IsCheckable="True"
+                      IsChecked="{Binding ViewModel.HasDarkSkinEnabled}"
+                      Command="{Binding ViewModel.ToggleSkinCommand}" />
         </MenuItem>
     </Menu>
 </UserControl> 
