--- a/BTimeLogger.Wpf/Windows/CreateNewActivityWindow/CreateNewActivityWindow.xaml
+++ b/BTimeLogger.Wpf/Windows/CreateNewActivityWindow/CreateNewActivityWindow.xaml
@@ -16,7 +16,7 @@
                       ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
     </WindowChrome.WindowChrome>
     <Border DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:CreateNewActivityWindow}}}"
-            Background="{StaticResource skinBackgroundLightBrush}">
+            Background="{DynamicResource skinBackgroundLightBrush}">
         <StackPanel>
             <controls:WindowButtons ViewModel="{Binding ViewModel.WindowButtonsViewModel}"
                                     HorizontalAlignment="Right" />
